In public/css/style.css, lines 897-898: put the property position and the absolute value then the property bottom and the -15px value for the '.form-control small' selector.(to prevent a large white space after the error message and then the success message).

--- a/books_exchange/public/css/style.css
+++ b/books_exchange/public/css/style.css
@@ -894,9 +894,8 @@ body {
 
 .form-control small {
     color: #e74c3c;
-    /*position: absolute;*/
-    /*position: relative;*/
-    bottom: 0;
+    position: absolute;
+    bottom: -15px;
     left: 0;
     visibility: hidden;
 }
